# DATAEXSYS-Genesis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile.in  Makefile  README.md  cmake_install.cmake  main.cpp  replayattack.cpp  sim  sim.cpp  simPKCertChain.cpp  simTest.cpp
.cache/clangd/index/: AppLayer.cpp.AB44F5AD636CC1EB.idx  AppLayer.h.5D54A41A89B17CF0.idx  BE.h.58AD564E10D265E4.idx  File.h.11C9133AC069E0D2.idx  FileToRaw.h.0E8AFB533415AEAC.idx  Message.h.4C2A40BFB77ED740.idx  MessageChunkNode.h.810FC46945606908.idx  MessageChunksList.h.1D02830BB0DDF39E.idx  RouteCache.cpp.2B66B8065B93F25F.idx  RouteCache.h.57C539148D3F8EBA.idx  c.cpp.AB03395E9D9D9B14.idx  routecache_test.cpp.71CCE89194E2B06B.idx
.github/workflows/: deploy-pages.yml
BABE/SDK/inc/App/: AppLayer.h  MessageChunksList.h  c.cpp
BABE/SDK/inc/App/Adapters/: FileToRaw.h
BABE/SDK/inc/App/Classes/: File.h  Message.h  MessageChunkNode.h  MessageChunksList.h
BABE/SDK/inc/Helper/: BIGEndian.h
BABE/SDK/src/App/: AppLayer.cpp
BABE/SDK/src/Helper/: BE.cpp
BABE/Tools/: Cargo.toml
BABE/Tools/src/: lib.rs
BABE/docs/: BABE-Engine.md  K8s.md  LdkK8sandObservability stack.md  MVPandMarket.md  NaaS.md  Others.md  api.md  architecture.md  ci-cd.md  deployment.md  ldk.md  performance.md  roadmap.md
DATAEXSYS/docs/: DATAEXSYS.md
F25_079/: FastFyp.cls  analysis.md  fypbib.bib  generate_latex_web.py  index.html  main.lof  main.lot  main.out  main.tex  mv_to_pdf.sh  post_process.py
F25_079/assets/: theme.css
MindMaps/: NetworkingStackDraft.md
Theme/: theme.css
inc/Blockchain/PKCertChain/: Certificate.h  Crypto.h  PKCertChain.h  Signkeys.h  nodeReg.h
inc/Blockchain/RouteLogChain/: Block.h  Blockchain.h  Receipt.h  RouteLogChain.h
inc/Cache/: RouteCache.h
inc/Consensus/: PoW.h  PoWchallenge.h
inc/Events/: Event.h  EventHandler.h  EventType.h
inc/Helper/: BigEndian.h  CSPRNG.h  Hash.h  Serialize.h
inc/Node/: BaseNode.h  DSRNode.h
inc/Packet/: Packet.h  PacketType.h  basicPacket.h
inc/Serialize/: Serialize.h
inc/Trust/: LocalTrustDiary.cpp  LocalTrustDiary.h
inc/adhoc/App/: AppMessage.h  OutgoingMessageProcessor.h
inc/adhoc/Link/: LinkFrame.h  OutgoingFrameProcessor.h
inc/adhoc/hardware/: HardwareBits.h  OutgoingBitsProcessor.h
inc/adhoc/net/: PacketType.h  to do.md
inc/adhoc/net/ControlPlane/: OutgoingPacketProcessorControl.h  RouteCache.h
inc/adhoc/net/DataPlane/: OutgoingPacketProcessorData.h
inc/adhoc/trans/: OutgoingSegmentProcessor.h  TransportFlags.h  TransportSegment.h
pdf/: main.aux  main.bbl  main.blg  main.toc
simulation_output/: AccessTablefor_10401.txt  AccessTablefor_10403.txt  AccessTablefor_10404.txt  AccessTablefor_10407.txt  AccessTablefor_10408.txt  AccessTablefor_10409.txt  ports.txt
simulation_output/DSR/Node_0/: AccessTable.txt  PacketLog.txt  Stats.txt
simulation_output/DSR/Node_1/: Stats.txt
simulation_output/DSR/Node_2/: AccessTable.txt  PacketLog.txt
simulation_output/DSR/Node_3/: AccessTable.txt  PacketLog.txt
simulation_output/DSR/Node_4/: AccessTable.txt
src/Consensus/: PoW.cpp
src/Node/: DSRNode.cpp
src/Serialize/: Serialize.cpp
src/adhoc/net/ControlPlane/: RouteCache.cpp
test/unit/adhoc/net/ControlPlane/: routecache_test.cpp
